--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/HeroImage.jpg" />
+    <link rel="'shortcut icon" type="'image/png" href="https://github.com/user-attachments/assets/d6829bea-d538-442b-be26-9a53aeb31a46"
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
